// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1 1`] = `
<div
  data-testid="checker"
>
  hi
   I am checker
  <div />
  <input
    type="text"
  />
</div>
`;

exports[`matches snapshot 2 1`] = `
<div
  data-testid="checker"
>
  save
   I am checker
  <div />
  <input
    type="text"
  />
</div>
`;
